@@ -21,6 +21,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.eventbus.EventBus;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.google.inject.assistedinject.Assisted;
+import jakarta.inject.Inject;
 import org.apache.commons.lang3.StringUtils;
 import org.graylog.integrations.aws.AWSClientBuilderUtil;
 import org.graylog.integrations.aws.AWSMessageType;
@@ -45,23 +46,23 @@ import org.graylog2.plugin.inputs.codecs.CodecAggregator;
 import org.graylog2.plugin.inputs.transports.ThrottleableTransport;
 import org.graylog2.plugin.inputs.transports.ThrottleableTransport2;
 import org.graylog2.plugin.inputs.transports.Transport;
-import org.graylog2.plugin.journal.RawMessage;
 import org.graylog2.plugin.system.NodeId;
 import org.graylog2.security.encryption.EncryptedValue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import software.amazon.awssdk.regions.Region;
 
-import jakarta.inject.Inject;
-
-import java.net.URL;
+import java.net.URI;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.function.Consumer;
+
+import static org.graylog.integrations.aws.inputs.AWSInput.getKinesisStreamARNDefinition;
+import static org.graylog.integrations.aws.inputs.AWSInput.getSingleTableStateTrackingFieldDefinition;
 
 public class KinesisTransport extends ThrottleableTransport2 {
+
     private static final Logger LOG = LoggerFactory.getLogger(KinesisTransport.class);
     public static final String NAME = "aws-kinesis-transport";
 
@@ -69,7 +70,9 @@ public class KinesisTransport extends ThrottleableTransport2 {
     private static final String CK_ACCESS_KEY = "aws_access_key";
     private static final String CK_SECRET_KEY = "aws_secret_key";
     public static final String CK_KINESIS_STREAM_NAME = "kinesis_stream_name";
+    public static final String CK_KINESIS_STREAM_ARN = "kinesis_stream_arn";
     public static final String CK_KINESIS_RECORD_BATCH_SIZE = "kinesis_record_batch_size";
+    public static final String CK_KINESIS_SINGLE_TABLE_STATE_TRACKING = "kinesis_single_table_state_tracking";
 
     public static final int DEFAULT_BATCH_SIZE = 10000;
 
@@ -120,6 +123,7 @@ public class KinesisTransport extends ThrottleableTransport2 {
         final String key = configuration.getString(CK_ACCESS_KEY);
         final EncryptedValue secret = configuration.getEncryptedValue(CK_SECRET_KEY);
         final String assumeRoleArn = configuration.getString(AWSInput.CK_ASSUME_ROLE_ARN);
+        final String externalId = configuration.getString(AWSInput.CK_EXTERNAL_ID);
 
         final String dynamodbEndpoint = configuration.getString(AWSInput.CK_DYNAMODB_ENDPOINT);
         final String cloudwatchEndpoint = configuration.getString(AWSInput.CK_CLOUDWATCH_ENDPOINT);
@@ -137,6 +141,7 @@ public class KinesisTransport extends ThrottleableTransport2 {
                 .awsAccessKeyId(key)
                 .awsSecretAccessKey(secret)
                 .assumeRoleArn(assumeRoleArn)
+                .externalId(externalId)
                 .cloudwatchEndpoint(cloudwatchEndpoint)
                 .dynamodbEndpoint(dynamodbEndpoint)
                 .iamEndpoint(iamEndpoint)
@@ -145,9 +150,11 @@ public class KinesisTransport extends ThrottleableTransport2 {
         final int batchSize = configuration.getInt(CK_KINESIS_RECORD_BATCH_SIZE, DEFAULT_BATCH_SIZE);
         final String streamName = configuration.getString(CK_KINESIS_STREAM_NAME);
         final AWSMessageType awsMessageType = AWSMessageType.valueOf(configuration.getString(AWSCodec.CK_AWS_MESSAGE_TYPE));
+        final boolean migrateToSingleTable = configuration.getBoolean(CK_KINESIS_SINGLE_TABLE_STATE_TRACKING, false);
 
-        this.kinesisConsumer = new KinesisConsumer(nodeId, this, objectMapper, kinesisCallback(input),
-                streamName, awsMessageType, batchSize, awsRequest, awsClientBuilderUtil, inputFailureRecorder);
+        this.kinesisConsumer = new KinesisConsumer(nodeId, this, objectMapper, input::processRawMessage,
+                streamName, awsMessageType, batchSize, awsRequest, awsClientBuilderUtil, inputFailureRecorder,
+                migrateToSingleTable, System::nanoTime);
 
         LOG.debug("Starting Kinesis reader thread for input {}", input.toIdentifier());
         executor.submit(this.kinesisConsumer);
@@ -163,17 +170,13 @@ public class KinesisTransport extends ThrottleableTransport2 {
     static void validateEndpoint(String endpoint, String endpointName) throws MisfireException {
         if (StringUtils.isNotEmpty(endpoint)) {
             try {
-                new URL(endpoint).toURI();
+                var ignored = new URI(endpoint).toURL();
             } catch (Exception e) {
                 // Re-throw the exception to fail the input start attempt
                 throw new MisfireException(String.format(Locale.ROOT, "The specified [%s] Override Endpoint [%s] is invalid.",
                         endpointName, endpoint), e);
             }
         }
-    }
-
-    private Consumer<byte[]> kinesisCallback(final MessageInput input) {
-        return (data) -> input.processRawMessage(new RawMessage(data));
     }
 
     @Override
@@ -232,6 +235,7 @@ public class KinesisTransport extends ThrottleableTransport2 {
                     "",
                     "Secret key of an AWS user with sufficient permissions. (See documentation)",
                     ConfigurationField.Optional.OPTIONAL,
+                    true,
                     TextField.Attribute.IS_PASSWORD
             ));
 
@@ -242,6 +246,7 @@ public class KinesisTransport extends ThrottleableTransport2 {
                     "The name of the Kinesis stream that receives your messages. See README for instructions on how to connect messages to a Kinesis Stream.",
                     ConfigurationField.Optional.NOT_OPTIONAL
             ));
+            r.addField(getKinesisStreamARNDefinition());
 
             r.addField(new NumberField(
                     CK_KINESIS_RECORD_BATCH_SIZE,
@@ -250,6 +255,8 @@ public class KinesisTransport extends ThrottleableTransport2 {
                     "The number of Kinesis records to fetch at a time. Each record may be up to 1MB in size. The AWS default is 10,000. Enter a smaller value to process smaller chunks at a time.",
                     ConfigurationField.Optional.OPTIONAL,
                     NumberField.Attribute.ONLY_POSITIVE));
+
+            r.addField(getSingleTableStateTrackingFieldDefinition());
 
             return r;
         }
