@@ -17,22 +17,20 @@
 package org.graylog.plugins.pipelineprocessor.db.memory;
 
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.MapMaker;
 import com.google.common.collect.Sets;
+import jakarta.inject.Inject;
 import org.graylog.plugins.pipelineprocessor.db.RuleDao;
 import org.graylog.plugins.pipelineprocessor.db.RuleService;
 import org.graylog.plugins.pipelineprocessor.events.RulesChangedEvent;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.events.ClusterEventBus;
 
-import jakarta.inject.Inject;
-
 import java.util.Collection;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 /**
  * A RuleService that does not persist any data, but simply keeps it in memory.
@@ -66,9 +64,14 @@ public class InMemoryRuleService implements RuleService {
         titleToId.put(toSave.title(), toSave.id());
         store.put(toSave.id(), toSave);
 
-        clusterBus.post(RulesChangedEvent.updatedRuleId(toSave.id()));
+        clusterBus.post(RulesChangedEvent.updatedRule(toSave.id(), toSave.title()));
 
         return toSave;
+    }
+
+    @Override
+    public RuleDao save(RuleDao rule, boolean checkMutability) {
+        return save(rule);
     }
 
     @Override
@@ -95,16 +98,31 @@ public class InMemoryRuleService implements RuleService {
     }
 
     @Override
+    public Collection<RuleDao> loadAllByTitle(String regex) {
+        return store.values().stream()
+                .filter(rule -> rule.title().matches(regex))
+                .toList();
+    }
+
+    @Override
+    public Collection<RuleDao> loadAllByScope(String scope) {
+        return store.values().stream()
+                .filter(rule -> Objects.equals(rule.scope(), scope))
+                .toList();
+    }
+
+    @Override
     public void delete(String id) {
         if (id == null) {
             return;
         }
         final RuleDao removed = store.remove(id);
+
         // clean up title index if the rule existed
         if (removed != null) {
             titleToId.remove(removed.title());
+            clusterBus.post(RulesChangedEvent.deletedRule(id, removed.title()));
         }
-        clusterBus.post(RulesChangedEvent.deletedRuleId(id));
     }
 
     @Override
@@ -112,7 +130,7 @@ public class InMemoryRuleService implements RuleService {
         final Set<String> needles = Sets.newHashSet(ruleNames);
         return store.values().stream()
                 .filter(ruleDao -> needles.contains(ruleDao.title()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String createId() {
