@@ -20,12 +20,11 @@ import com.codahale.metrics.MetricRegistry;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.eventbus.EventBus;
 import com.google.common.graph.Graph;
 import org.apache.commons.collections.map.HashedMap;
+import org.graylog.testing.mongodb.MongoDBExtension;
 import org.graylog.testing.mongodb.MongoDBFixtures;
-import org.graylog.testing.mongodb.MongoDBInstance;
 import org.graylog2.contentpacks.EntityDescriptorIds;
 import org.graylog2.contentpacks.model.ModelId;
 import org.graylog2.contentpacks.model.ModelTypes;
@@ -42,6 +41,7 @@ import org.graylog2.contentpacks.model.entities.NativeEntity;
 import org.graylog2.contentpacks.model.entities.references.ReferenceMapUtils;
 import org.graylog2.contentpacks.model.entities.references.ValueReference;
 import org.graylog2.contentpacks.model.entities.references.ValueType;
+import org.graylog2.database.MongoCollections;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.database.entities.DefaultEntityScope;
 import org.graylog2.events.ClusterEventBus;
@@ -73,13 +73,16 @@ import org.graylog2.shared.SuppressForbidden;
 import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
 import org.graylog2.shared.inputs.InputRegistry;
 import org.graylog2.shared.inputs.MessageInputFactory;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
+import org.joda.time.DateTime;
+import org.joda.time.DateTimeZone;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -97,12 +100,10 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
+@ExtendWith(MongoDBExtension.class)
+@MockitoSettings(strictness = Strictness.WARN)
 public class InputFacadeTest {
-    @Rule
-    public final MongoDBInstance mongodb = MongoDBInstance.createForClass();
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     private final ObjectMapper objectMapper = new ObjectMapperProvider().get();
 
@@ -128,9 +129,9 @@ public class InputFacadeTest {
     private InputService inputService;
     private InputFacade facade;
 
-    @Before
+    @BeforeEach
     @SuppressForbidden("Using Executors.newSingleThreadExecutor() is okay in tests")
-    public void setUp() throws Exception {
+    public void setUp(MongoCollections mongoCollections) throws Exception {
         final MetricRegistry metricRegistry = new MetricRegistry();
         final ClusterEventBus clusterEventBus = new ClusterEventBus("cluster-event-bus", Executors.newSingleThreadExecutor());
         final GrokPatternService grokPatternService = new InMemoryGrokPatternService(clusterEventBus);
@@ -141,7 +142,7 @@ public class InputFacadeTest {
                 Executors.newScheduledThreadPool(1));
         final ExtractorFactory extractorFactory = new ExtractorFactory(metricRegistry, grokPatternRegistry, lookupTableService);
         final ConverterFactory converterFactory = new ConverterFactory(lookupTableService);
-        inputService = new InputServiceImpl(mongodb.mongoConnection(), extractorFactory, converterFactory, messageInputFactory, clusterEventBus, new ObjectMapperProvider().get());
+        inputService = new InputServiceImpl(mongoCollections, extractorFactory, converterFactory, messageInputFactory, clusterEventBus, new ObjectMapperProvider().get());
         final InputRegistry inputRegistry = new InputRegistry();
         Set<PluginMetaData> pluginMetaData = new HashSet<>();
         Map<String, MessageInput.Factory<? extends MessageInput>> inputFactories = new HashMap<>();
@@ -174,12 +175,15 @@ public class InputFacadeTest {
 
     @Test
     public void exportNativeEntity() {
-        final ImmutableMap<String, Object> fields = ImmutableMap.of(
-                MessageInput.FIELD_TITLE, "Input Title",
-                MessageInput.FIELD_TYPE, "org.graylog2.inputs.raw.udp.RawUDPInput",
-                MessageInput.FIELD_CONFIGURATION, Collections.emptyMap()
-        );
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .setId(UUID.randomUUID().toString())
+                .setTitle("Input Title")
+                .setType("org.graylog2.inputs.raw.udp.RawUDPInput")
+                .setConfiguration(Collections.emptyMap())
+                .setCreatedAt(DateTime.now(DateTimeZone.UTC))
+                .setCreatorUserId(UUID.randomUUID().toString())
+                .build();
+
         final ImmutableList<Extractor> extractors = ImmutableList.of();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, extractors);
         final EntityDescriptor descriptor = EntityDescriptor.create(input.getId(), ModelTypes.INPUT_V1);
@@ -199,13 +203,15 @@ public class InputFacadeTest {
 
     @Test
     public void exportNativeEntityWithEncryptedValues() {
-        final ImmutableMap<String, Object> fields = ImmutableMap.of(
-                MessageInput.FIELD_TITLE, "Input Title",
-                MessageInput.FIELD_TYPE, "org.graylog2.inputs.misc.jsonpath.JsonPathInput",
-                MessageInput.FIELD_CONFIGURATION,
-                Map.of("encrypted_value",
-                        new EncryptedValueService(UUID.randomUUID().toString()).encrypt("secret")));
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .setId(UUID.randomUUID().toString())
+                .setTitle("Input Title")
+                .setType("org.graylog2.inputs.misc.jsonpath.JsonPathInput")
+                .setConfiguration(Map.of("encrypted_value",
+                        new EncryptedValueService(UUID.randomUUID().toString()).encrypt("secret")))
+                .setCreatedAt(DateTime.now(DateTimeZone.UTC))
+                .setCreatorUserId(UUID.randomUUID().toString())
+                .build();
         final ImmutableList<Extractor> extractors = ImmutableList.of();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, extractors);
         final EntityDescriptor descriptor = EntityDescriptor.create(input.getId(), ModelTypes.INPUT_V1);
@@ -251,7 +257,7 @@ public class InputFacadeTest {
 
 
     @Test
-    @Ignore("Doesn't work without massive amount of mocks")
+    @Disabled("Doesn't work without massive amount of mocks")
     public void createNativeEntity() {
         final Map<String, Object> configuration = new HashMap<>();
         configuration.put("override_source", null);
@@ -285,10 +291,14 @@ public class InputFacadeTest {
 
     @Test
     public void createExcerpt() {
-        final ImmutableMap<String, Object> fields = ImmutableMap.of(
-                "title", "Dashboard Title"
-        );
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .setId(UUID.randomUUID().toString())
+                .setTitle("Excerpt")
+                .setType("org.graylog2.inputs.raw.udp.RawUDPInput")
+                .setConfiguration(Collections.emptyMap())
+                .setCreatedAt(DateTime.now(DateTimeZone.UTC))
+                .setCreatorUserId(UUID.randomUUID().toString())
+                .build();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input);
         final EntityExcerpt excerpt = facade.createExcerpt(inputWithExtractors);
 
@@ -472,7 +482,7 @@ public class InputFacadeTest {
                 ValueReference.of(Converter.Type.LOOKUP_TABLE.name()), ReferenceMapUtils.toReferenceMap(lookupTableConfig));
         final List<ConverterEntity> converterEntities = new ArrayList<>(1);
         converterEntities.add(converterEntity);
-        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input));
+        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input.getId()));
         final LookupTableExtractor extractor = (LookupTableExtractor) inputWithExtractors.extractors().iterator().next();
         final ExtractorEntity extractorEntity = ExtractorEntity.create(
                 ValueReference.of(extractor.getTitle()),
@@ -550,7 +560,7 @@ public class InputFacadeTest {
     @MongoDBFixtures("InputFacadeTest.json")
     public void resolveForInstallationGrokPattern() throws NotFoundException {
         final Input input = inputService.find("5ae2ebbeef27464477f0fd8b");
-        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input));
+        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input.getId()));
         final GrokExtractor grokExtractor = (GrokExtractor) inputWithExtractors.extractors().iterator().next();
         final ExtractorEntity extractorEntity = ExtractorEntity.create(
                 ValueReference.of(grokExtractor.getTitle()),
